@@ -1,5 +1,5 @@
 .\"
-.\" $Id: smidump.1.in,v 1.8 2000/04/06 13:37:27 strauss Exp $
+.\" $Id: smidump.1.in,v 1.9 2000/05/02 12:57:17 strauss Exp $
 .\"
 .TH smidump 1  "April 8, 2000" "IBR" "SMI Tools"
 .SH NAME
@@ -71,7 +71,7 @@ Preload the module \fImodule\fP before reading the main module(s). This may
 be helpful if an incomplete main module misses to import some definitions.
 .TP
 .B "-s"
-Suppress most comments from dumped modules. What kind of information
+Suppress comments from dumped modules. What kind of information
 gets suppressed depends on the output format.
 .TP
 .B "-u"
@@ -98,13 +98,13 @@ smiv1
 SMIv2 compliant format as defined in RFC 1155, RFC 1212, RFC 1215.
 .TP
 mosy
-format generated by the mosy compiler.
+Format generated by the mosy compiler.
 .TP
 imports
-import hierarchy of a MIB module.
+Import hierarchy of a MIB module.
 .TP
 types
-types defined in a MIB module.
+Types defined in a MIB module.
 .TP
 tree
 OID tree structure of a MIB module.
@@ -134,6 +134,9 @@ Java AgentX sub-agent classes in separate files (experimental).
 .TP
 xml
 SMI in XML format (experimental).
+.TP
+metrics
+Metrics derived from a MIB module (experimental).
 
 .SH "EXAMPLE"
 This example converts the SMIv2 module IF-MIB in the current directory
